# Neighborhood_Insights

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  eng_plan.md  test.md
api/: Dockerfile  main.py  pyproject.toml
api/tests/: test_conf.py  test_main.py
app/: .env.local.example  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json
app/components/__tests__/: Map.test.tsx
app/public/: manifest.json  sw.js
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/details/[id]/: page.tsx
app/src/components/: Map.tsx
backend/: main.py
data/outputs/looker/csv/: qt_1ipv7riftd.csv  qt_d1sbqsiftd.csv  qt_p9hh25phtd.csv
data/scraping/: look_for_grocery_data.py  scrape_emergency_data.py
db/: 01-init-migration-system.sql  migrate.sql  schema.sql
db/migrations/: 001_initial_schema.sql  README.md
etl/: calculate_distances.py  cbs_regions_loader.py  get_data_from_gov_maps.py  get_long_lat_from_address.py  pyproject.toml
etl/tests/: conftest.py  test_database_operations.py
scripts/: test-all.sh
tests/: test_integration.py  test_integration.sh  test_services.py  test_services.sh
